# calender_event_fetch_oAuth2

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
calendar_integration/: models.py  views.py
calendar_integration/migrations/: 0001_initial.py
google_calendar_integration/: settings.py  urls.py
