[tool.poetry]
name = "repl_nix_calendereventsapioAuth2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-auth-oauthlib = "^1.0.0"
Django = "^4.2.1"
google-api-python-client = "^2.86.0"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
